--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                   <h4 style="padding-top: 70px;">Enterprise Resource Planning</h4>
                   <p>ERP system of PT Sinko Prima Alloy include sales division , warehouse , quality control , logsitics and more</p>
                   <div class="portfolio-links">
-                    <a href="portfolio-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
+                    <a href="ERP-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
                   </div>
                 </div>
               </div>
@@ -451,7 +451,7 @@
 
                   <p>This system build meant to track health of employee PT Sinko Prima Alloy. Include weight, blood pressure, history of medicine use and more </p>
                   <div class="portfolio-links">
-                    <a href="portfolio-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
+                    <a href="Health-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
                   </div>
                 </div>
               </div>
@@ -466,7 +466,7 @@
 
                   <p>System information of PT Sinko Prima Alloy usually called "SI", this system store sales transaction. I build this system with native PHP</p>
                   <div class="portfolio-links">
-                    <a href="portfolio-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
+                    <a href="SI-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
                   </div>
                 </div>
               </div>
@@ -480,7 +480,7 @@
                   <h4>Tekenens website</h4>
                   <p>This is company profile webite, include dashboard admin to manage website content </p>
                   <div class="portfolio-links">
-                    <a href="portfolio-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
+                    <a href="Tekenens-details.html" class="portfolio-details-lightbox " data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i> Detail</a>
                   </div>
                 </div>
               </div>
