--- a/Tekenens-details.html
+++ b/Tekenens-details.html
@@ -44,15 +44,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/tekenens/1.JPG">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/tekenens/2.JPG">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/tekenens/3.JPG">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/tekenens/4.JPG">
                 </div>
 
               </div>
