--- a/index.html
+++ b/index.html
@@ -475,7 +475,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200" style="padding-top:30px">
             <div class=" icon-box iconbox-orange " style="width:100%">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+               
+                <img src="assets/img/portfolio/tekenens/1.JPG" class="img-fluid" >
                 <div class="portfolio-info">
                   <h4>Tekenens website</h4>
                   <p>This is company profile webite, include dashboard admin to manage website content </p>
