--- a/ERP-details.html
+++ b/ERP-details.html
@@ -44,15 +44,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/ERP/1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/ERP/2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/ERP/3.PNG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ERP/4.PNG" alt="">
                 </div>
 
               </div>
@@ -62,7 +66,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>ERP (Enterprise Resource Planning)
+              <h3>ERP (Enterprise Resource Plannings)
               </h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
