--- a/Health-details.html
+++ b/Health-details.html
@@ -44,15 +44,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="" >
+                  <img src="assets/img/portfolio/kesehatan/1.PNG" alt="" >
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/kesehatan/2.PNG" alt="" >
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/kesehatan/3.PNG" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/kesehatan/4.PNG" alt="" >
                 </div>
 
               </div>
