--- a/SI-details.html
+++ b/SI-details.html
@@ -44,15 +44,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/SI/1.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/SI/2.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/SI/3.PNG" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/SI/4.PNG" alt="">
                 </div>
 
               </div>
