--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
           </div>
           <div class="col-lg-3">
             <div class="progress">
-              <span class="skill">HTML <i class="val-skill">Beginner</i></span>
+              <span class="skill">HTML</span>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val-skill">Beginner</i></span>
+              <span class="skill">CSS </span>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val-skill">Beginner</i></span>
+              <span class="skill">JavaScript</span>
             </div>
 
           </div>
@@ -136,15 +136,15 @@
           <div class="col-lg-3">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val-skill">Beginner</i></span>
+              <span class="skill">PHP </span>
             </div>
 
             <div class="progress">
-              <span class="skill">Laravel <i class="val-skill">Beginner</i></span>
+              <span class="skill">Laravel </span>
             </div>
 
             <div class="progress">
-              <span class="skill">MySQL <i class="val-skill">Beginner</i></span>
+              <span class="skill">MySQL </span>
             </div>
 
 
@@ -152,14 +152,14 @@
           </div>
 
           <div class="col-lg-3">
+          //<div class="progress">
+            //  <span class="skill">Flutter <i class="val-skill">Beginner</i></span>
+            //</div>
             <div class="progress">
-              <span class="skill">Flutter <i class="val-skill">Beginner</i></span>
+              <span class="skill">RESTfull API </span>
             </div>
             <div class="progress">
-              <span class="skill">RESTfull API <i class="val-skill">Beginner</i></span>
-            </div>
-            <div class="progress">
-              <span class="skill">Postman <i class="val-skill">Beginner</i></span>
+              <span class="skill">Postman </span>
             </div>
           </div>
           <div class="col-lg-1">
