--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           </div>
 
           <div class="col-lg-3">
-          //<div class="progress">
+         <!-- <div class="progress">
             //  <span class="skill">Flutter <i class="val-skill">Beginner</i></span>
-            //</div>
+            //</div>-->
             <div class="progress">
               <span class="skill">RESTfull API </span>
             </div>
